# bankreport

./: Dockerfile  Makefile  README.md  pyproject.toml  run.sh
bankreport/: cli.py
src/: __main__.py  csv_import.py
