[tool.poetry]
name = "bankreport"
version = "0.1.0"
description = ""
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
